Basic book rendering functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <header>
+        <h1>My Library</h1>
+        <ul>
+            <li><button>Add New Book</button></li>
+        </ul>
+    </header>
+    <div class="content">
+
+    </div>
+
     <script src="./scripts/script.js"></script>
 </body>
 
